chore(lint): set up linting

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#00ccff" />
     <link rel="dns-prefetch" href="//github.com" />
 
+    <link rel="stylesheet" href="../scss/style.scss" media="print" onload="this.media='all'">
     <script async src="./index.ts"></script>
   </head>
   <body></body>
