--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,12 +5,11 @@
     <title>Vela</title>
     <meta name="description" content="Vela" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <meta name="theme-color" content="#00ccff" />
     <link rel="dns-prefetch" href="//github.com" />
-
     <link rel="stylesheet" href="../scss/style.scss" media="print" onload="this.media='all'">
-    <script async src="./index.ts"></script>
   </head>
-  <body></body>
+  <body>
+    <script async src="./index.ts"></script>
+  </body>
 </html>
