feat(favicon): adding default favicon (#109)
* default favicon

* lint?

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="icon"
+      type="image/ico"
+      id="favicon"
+      href="./images/favicon.ico"
+    />
     <meta charset="utf-8" />
     <title>Vela</title>
     <meta name="description" content="Vela" />
