--- a/src/static/index.html
+++ b/src/static/index.html
@@ -15,6 +15,7 @@
     <meta name="theme-color" content="#00ccff" />
     <link rel="dns-prefetch" href="//github.com" />
 
+    <script src="./d3.min.js"></script>
     <script async src="./index.ts"></script>
   </head>
   <body></body>
