fix(deps): add transformer-elm

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" content="#00ccff" />
     <link rel="dns-prefetch" href="//github.com" />
 
-    <script async src="./index.ts"></script>
+    <script type="module" src="./index.ts"></script>
   </head>
   <body></body>
 </html>
